overflow fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ html, body {
   width: 100vw;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: auto;
   font-family: 'Open Sans','HelveticaNeue','Helvetica Neue',Helvetica,Arial,sans-serif;
   font-size: 10px;
   font-weight: 600;
